Second Version Portfolio

--- a/style.css
+++ b/style.css
@@ -317,7 +317,7 @@ section {
   margin: auto 0;
 }
 
-/* EXPERIENCE SECTION */
+/* EXPERIENCE SECTION (Experience Section will be included later in this project!! */
 
 #experience {
   position: relative;
